--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vite + React</title>
+        <!-- Font -->
+        <style>
+            @font-face {
+                font-family: "GT Walsheim Pro";
+                src: local("GT Walsheim Pro Thin"), local("GTWalsheimPro-Thin"),
+                    url("fonts/GTWalsheimPro-Thin.woff2") format("woff2");
+                font-weight: 100;
+                font-style: normal;
+            }
+
+            @font-face {
+                font-family: "GT Walsheim Pro";
+                src: local("GT Walsheim Pro Light"),
+                    local("GTWalsheimPro-Light"),
+                    url("fonts/GTWalsheimPro-Light.woff2") format("woff2");
+                font-weight: 300;
+                font-style: normal;
+            }
+
+            @font-face {
+                font-family: "GT Walsheim Pro";
+                src: local("GT Walsheim Pro Regular"),
+                    local("GTWalsheimPro-Regular"),
+                    url("fonts/GTWalsheimPro-Regular.woff2") format("woff2");
+                font-weight: 400;
+                font-style: normal;
+            }
+
+            @font-face {
+                font-family: "GT Walsheim Pro";
+                src: local("GT Walsheim Pro Medium"),
+                    local("GTWalsheimPro-Medium"),
+                    url("fonts/GTWalsheimPro-Medium.woff2") format("woff2");
+                font-weight: 500;
+                font-style: normal;
+            }
+
+            @font-face {
+                font-family: "GT Walsheim Pro";
+                src: local("GT Walsheim Pro Bold"), local("GTWalsheimPro-Bold"),
+                    url("fonts/GTWalsheimPro-Bold.woff2") format("woff2");
+                font-weight: 700;
+                font-style: normal;
+            }
+
+            @font-face {
+                font-family: "GT Walsheim Pro";
+                src: local("GT Walsheim Pro Black"),
+                    local("GTWalsheimPro-Black"),
+                    url("fonts/GTWalsheimPro-Black.woff2") format("woff2");
+                font-weight: 900;
+                font-style: normal;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="root"></div>
+        <div id="modals-container"></div>
+        <script type="module" src="/src/main.jsx"></script>
+    </body>
 </html>
